everything done but dev

--- a/index.html
+++ b/index.html
@@ -56,20 +56,21 @@ URL: https://code.google.com/p/io-2012-slides
             <li>Ping-Pong Electronic Engineer</li>
             <li>Working in IT industry for 20 years - 14 years consulting and still learning</li>
             <li>Connector & Community guy</li>
-            <li>Founder of <a href="http://gctechspace.org">GCTechSpace</a> - an open tech incubator & accelerator in
+            <li>Founder of <a href="http://gctechspace.org">GCTechSpace</a> - an open tech incubator & accelerator
+                in
                 Robina, Gold Coast
             </li>
-            <li>Not a management consultant, but love to hang out with them!
+            <li>Current pet project- using off-the-shelf mobile devices for industrial & robotic control</li>
         </ul>
     </article>
 </slide>
-
 
 <slide class="fill nobackground" style="background-image: url(images/Supercomputer-In-Your-Pocket-head.jpg)">
     <hgroup>
         <h2 class="black">Is that a Supercomputer in your pocket?</h2>
     </hgroup>
-    <footer class="source black">FoneBank <a href="images/Supercomputer-In-Your-Pocket-610.jpg">(full size image)</a>
+    <footer class="source black">FoneBank <a href="images/Supercomputer-In-Your-Pocket-610.jpg">(full size
+        image)</a>
     </footer>
 </slide>
 
@@ -95,6 +96,258 @@ URL: https://code.google.com/p/io-2012-slides
         </ul>
     </article>
 </slide>
+
+<slide class="fill nobackground" style="background-image: url(images/models.jpg);">
+
+    <hgroup>
+        <h2 class="white">Fashion!</h2>
+    </hgroup>
+    <footer class="source white">source: José Goulão</a>
+    </footer>
+</slide>
+
+<slide>
+    <hgroup>
+        <h2>Mobile: the biggest fashion item</h2>
+    </hgroup>
+
+    <article>
+        <ul class="build">
+            <li>Design for Obselesence</li>
+            <li>Perceived Obselesence</li>
+            <li>Sustainable?</li>
+            <li>Features of new devices are still far from mainstream. eg</li>
+            <ul>
+                <li>NFC</li>
+                <li>QI Charging</li>
+                <li>Miracast</li>
+                <li>Touchless input (aka voice)</li>
+            </ul>
+            <li><a href="http://storyofstuff.org/movies/story-of-stuff">storyofstuff.org/movies/story-of-stuff</a>
+            </li>
+            <li>Millenials/GenY now rate a smart phone as their number one prized possession (above a car!)</li>
+        </ul>
+    </article>
+</slide>
+
+
+<slide>
+    <hgroup>
+        <h2>World Wide Smartphone Sales (1000s)</h2>
+    </hgroup>
+    <article class="flexbox vcenter">
+        <img src="images/smartphonesales.png" alt="Smart Phone Sales" title="Smart Phone Sales">
+        <footer class="source">source: Gartner</footer>
+    </article>
+</slide>
+
+
+<slide>
+    <hgroup>
+        <h2>Mobile Operating Systems</h2>
+    </hgroup>
+
+    <article>
+        <ul class="build">
+            <li>IOS</li>
+            <ul>
+                <li>iPhone,iPad</li>
+                <li>Entire controlled by Apple</li>
+            </ul>
+            <li>Android</li>
+            <ul>
+                <li>Google Nexus 4,5,7,10</li>
+                <li>Samsung Galaxy S2,S3,S4, Galaxy Tab</li>
+                <li>ASUS, LG, Motorola, Sony</li>
+                <li>Driven by Google but a certain amount of freedom</li>
+            </ul>
+            <li>Windows 8</li>
+            <ul>
+                <li>Mainly Nokia, also HTC</li>
+                <li>Surface with RT, Surface Pro - lots of blurring</li>
+            </ul>
+            <ul>Others: Blackberry, Bada, Tizen, Sailfish, Ubuntu Touch, Firefox OS, ChromeOS</ul>
+        </ul>
+    </article>
+</slide>
+
+
+<slide class="fill nobackground" style="background-image: url(images/Sea_of_phones.jpg);">
+
+    <hgroup>
+        <h2 class="white">So how to avoid this?</h2>
+    </hgroup>
+    <footer class="source white">source: Sascha Pohflepp</a>
+    </footer>
+</slide>
+
+<slide>
+    <hgroup>
+        <h2>Getting the most out of your devices</h2>
+    </hgroup>
+
+    <article>
+        <ul class="build">
+            <li>Tune ups - Android Assistant/Task killer</li>
+            <li>Reinstalls - restore, cloud backup</li>
+            <li>Remove unnecessary and unused apps (80% apps not used)</li>
+            <li>Turn off things you don't use. eg. push notifications, ping, locations services, indexing, android: live
+                wallpaper & widgets
+            </li>
+            <li>Change your battery (even if you can't see it!)</li>
+            <li>Add more memory if you have a card slot</li>
+            <li>If it's broken... get a second opinion! (or check <a href="http://ifixit.com">ifixit.com</a>)</li>
+            <li>If it really is broken - please recycle or reuse</li>
+            <li>And most importantly.....</li>
+            <li>.....USE IT!</li
+        </ul>
+    </article>
+</slide>
+
+<slide class="fill nobackground" style="background-image: url(images/AppsEverywhere.png);">
+
+    <hgroup>
+        <h2 class="white">Apps Apps everywhere!</h2>
+    </hgroup>
+    </footer>
+</slide>
+
+
+<slide>
+    <hgroup>
+        <h2>Choosing which apps to use?</h2>
+    </hgroup>
+
+    <article>
+        <ul class="build">
+            <li>Try to use cross platform apps</li>
+            <ul>
+                <li>Sharing with colleagues & clients</li>
+                <li>What happens if you switch?</li>
+            </ul>
+            <li>Don't be overwhelmed</li>
+            <ul>
+                <li>Ask your friends</li>
+                <li>Use social media</li>
+                <li>Use sites like <a href="http://alternativeto.net">alternativeto.net</a> and <a
+                        href="http://appcrawlr.com">appcrawlr.com</a></li>
+            </ul>
+            <li>Where is your data?</li>
+            <ul>
+                <li>Cloud</li>
+                <li>Synced to PC</li>
+                <li>On device</li>
+                <li>Intranet</li>
+            </ul>
+        </ul>
+    </article>
+</slide>
+
+<slide class="fill nobackground" style="background-image: url(images/AppsEverywhere.png);">
+
+    <hgroup>
+        <h2 class="white">Some Apps for you. YES you!</h2>
+    </hgroup>
+    </footer>
+</slide>
+
+<slide>
+    <hgroup>
+        <h2>Chat/Voice/Video Messaging</h2>
+    </hgroup>
+
+    <article>
+        <ul class="build apps">
+            <li>Google Hangouts <img src="images/apps/hangouts.webp"/></li>
+            <li>Skype (careful!) <img src="images/apps/skype.webp"</li>
+            <li>Whatsapp <img src="images/apps/whatsapp.webp"</li>
+            <li>Facetime <img src="images/apps/facetime.jpg"</li>
+            <li>Sipdroid <img src="images/apps/sipdroid.webp"</li>
+        </ul>
+    </article>
+</slide>
+
+<slide>
+    <hgroup>
+        <h2>Group Messaging/Collaboration</h2>
+    </hgroup>
+
+    <article>
+        <ul class="build apps">
+            <li>Hipchat <img src="images/apps/hipchat.webp"/></li>
+            <li>Google Plus <img src="images/apps/plus.webp"</li>
+            <li>Flowdock <img src="images/apps/flowdock.webp"</li>
+            <li>Chatter <img src="images/apps/chatter.webp"</li>
+            <li>Kandan <img src="images/apps/kandan.png"</li>
+        </ul>
+    </article>
+</slide>
+
+<slide>
+    <hgroup>
+        <h2>Documents</h2>
+    </hgroup>
+
+    <article>
+        <ul class="build apps">
+            <li>Google Drive <img src="images/apps/drive.webp"/></li>
+            <li>Office 365 <img src="images/apps/office.webp"/></li>
+            <li>Evernote<img src="images/apps/evernote.webp"></li>
+            <li>Dropbox  <img src="images/apps/dropbox.webp"/></li>
+            <li>Documents to Go <img src="images/apps/docstogo.webp"/></li>
+        </ul>
+    </article>
+</slide>
+
+<slide>
+    <hgroup>
+        <h2>Notes</h2>
+    </hgroup>
+
+    <article>
+        <ul class="build apps">
+            <li>Evernote <img src="images/apps/evernote.webp"/></li>
+            <li>Springpad <img src="images/apps/springpad.webp"/></li>
+            <li>OneNote <img src="images/apps/onenote.webp"></li>
+            <li>Keep <img src="images/apps/keep.webp"/></li>
+            <li>Skitch <img src="images/apps/skitch.webp"/></li>
+            <li>MindMeister <img src="images/apps/mindmeister.webp"/></li>
+        </ul>
+    </article>
+</slide>
+
+<slide>
+    <hgroup>
+        <h2>Serious Social Media</h2>
+    </hgroup>
+
+    <article>
+        <ul class="build apps">
+            <li>Linkedin <img src="images/apps/linkedin.webp"/></li>
+            <li>Twitter <img src="images/apps/twitter.webp"/></li>
+            <li>Google Plus <img src="images/apps/plus.webp"></li>
+            <li>Meetup <img src="images/apps/meetup.webp"/></li>
+        </ul>
+    </article>
+</slide>
+
+<slide>
+    <hgroup>
+        <h2>Others</h2>
+    </hgroup>
+
+    <article>
+        <ul class="build apps">
+            <li>Livescribe <img src="images/apps/livescribe.gif"/></li>
+            <li>Swiftkey <img src="images/apps/swiftkey.webp"/></li>
+            <li>...or buy a real keyboard!</li>
+            <li>Xero <img src="images/apps/xero.webp"/></li>
+            <li>Grafio <img src="images/apps/grafio.jpg"/></li>
+        </ul>
+    </article>
+</slide>
+
+
 
 <slide class="thank-you-slide segue nobackground">
     <aside class="gdbar right"><img src="images/refactor128.png"></aside>
