--- a/index.html
+++ b/index.html
@@ -39,10 +39,9 @@ URL: https://code.google.com/p/io-2012-slides
     <!-- The content of this hgroup is replaced programmatically through the slide_config.json. -->
     <hgroup class="auto-fadein">
         <h1 data-config-title><!-- populated from slide_config.json --></h1>
-
         <h2 data-config-subtitle><!-- populated from slide_config.json --></h2>
-
         <p data-config-presenter><!-- populated from slide_config.json --></p>
+        <p><a href="http://spidie.github.io/levmobtoday">spidie.github.io/levmobtoday</a></p>
     </hgroup>
 </slide>
 
@@ -56,22 +55,17 @@ URL: https://code.google.com/p/io-2012-slides
             <li>Ping-Pong Electronic Engineer</li>
             <li>Working in IT industry for 20 years - 14 years consulting and still learning</li>
             <li>Connector & Community guy</li>
-            <li>Founder of <a href="http://gctechspace.org">GCTechSpace</a> - an open tech incubator & accelerator
-                in
-                Robina, Gold Coast
-            </li>
-            <li>Current pet project- using off-the-shelf mobile devices for industrial & robotic control</li>
+            <li>Founder of <a href="http://gctechspace.org">GCTechSpace</a> - an open tech incubator & accelerator in Robina, Gold Coast</li>
+            <li>Current pet project: using off-the-shelf mobile devices for industrial & robotic control</li>
         </ul>
     </article>
 </slide>
 
-<slide class="fill nobackground" style="background-image: url(images/Supercomputer-In-Your-Pocket-head.jpg)">
-    <hgroup>
-        <h2 class="black">Is that a Supercomputer in your pocket?</h2>
-    </hgroup>
-    <footer class="source black">FoneBank <a href="images/Supercomputer-In-Your-Pocket-610.jpg">(full size
-        image)</a>
-    </footer>
+<slide>
+    <article class="flexbox vcenter">
+        <img src="images/supercomputer.png" height=600px alt="SuperComputer" title="SuperComputer">
+        <footer class="source black">Inspired by <a href="images/Supercomputer-In-Your-Pocket-610.jpg">FoneBank</a>
+    </article>
 </slide>
 
 <slide>
@@ -91,7 +85,7 @@ URL: https://code.google.com/p/io-2012-slides
             <li>2013 - Samsung Galaxy S4 - 51.2 GFLOPS</li>
             <li>2010 - Intel Core i7 - 100 GFLOPS</li>
             <li>2010 - NVIDIA Tesla GPU - 900 GFLOPS</li>
-            <li>2012 - Cray XK7 - US18 PFLOPS</li>
+            <li>2012 - Cray XK7 - 18 PFLOPS</li>
             <li>2013 - New Chinese Super Computer: Tianhe-2 - 54.9 PFLOPS</li>
         </ul>
     </article>
@@ -113,16 +107,17 @@ URL: https://code.google.com/p/io-2012-slides
 
     <article>
         <ul class="build">
-            <li>Design for Obselesence</li>
-            <li>Perceived Obselesence</li>
+            <li>Design for Obsolescence</li>
+            <li>Perceived Obsolescence</li>
             <li>Sustainable?</li>
-            <li>Features of new devices are still far from mainstream. eg</li>
-            <ul>
-                <li>NFC</li>
-                <li>QI Charging</li>
-                <li>Miracast</li>
-                <li>Touchless input (aka voice)</li>
-            </ul>
+            <li>Features of new devices are still far from mainstream. eg
+                <ul>
+                    <li>NFC</li>
+                    <li>QI Charging</li>
+                    <li>Miracast</li>
+                    <li>Touchless input (aka voice)</li>
+                </ul>
+            </li>
             <li><a href="http://storyofstuff.org/movies/story-of-stuff">storyofstuff.org/movies/story-of-stuff</a>
             </li>
             <li>Millenials/GenY now rate a smart phone as their number one prized possession (above a car!)</li>
@@ -149,24 +144,27 @@ URL: https://code.google.com/p/io-2012-slides
 
     <article>
         <ul class="build">
-            <li>IOS</li>
-            <ul>
-                <li>iPhone,iPad</li>
-                <li>Entire controlled by Apple</li>
-            </ul>
-            <li>Android</li>
-            <ul>
-                <li>Google Nexus 4,5,7,10</li>
-                <li>Samsung Galaxy S2,S3,S4, Galaxy Tab</li>
-                <li>ASUS, LG, Motorola, Sony</li>
-                <li>Driven by Google but a certain amount of freedom</li>
-            </ul>
-            <li>Windows 8</li>
-            <ul>
-                <li>Mainly Nokia, also HTC</li>
-                <li>Surface with RT, Surface Pro - lots of blurring</li>
-            </ul>
-            <ul>Others: Blackberry, Bada, Tizen, Sailfish, Ubuntu Touch, Firefox OS, ChromeOS</ul>
+            <li>IOS
+                <ul>
+                    <li>iPhone,iPad</li>
+                    <li>Entire controlled by Apple</li>
+                </ul>
+            </li>
+            <li>Android
+                <ul>
+                    <li>Google Nexus 4,5,7,10</li>
+                    <li>Samsung Galaxy S2,S3,S4, Galaxy Tab</li>
+                    <li>ASUS, LG, Motorola, Sony</li>
+                    <li>Driven by Google but a certain amount of freedom</li>
+                </ul>
+            </li>
+            <li>Windows 8
+                <ul>
+                    <li>Mainly Nokia, also HTC</li>
+                    <li>Surface with RT, Surface Pro - lots of blurring</li>
+                </ul>
+            </li>
+            <li>Others: Blackberry, Bada, Tizen, Sailfish, Ubuntu Touch, Firefox OS, ChromeOS</li>
         </ul>
     </article>
 </slide>
@@ -189,7 +187,7 @@ URL: https://code.google.com/p/io-2012-slides
     <article>
         <ul class="build">
             <li>Tune ups - Android Assistant/Task killer</li>
-            <li>Reinstalls - restore, cloud backup</li>
+            <li>Re-installs - restore, cloud backup</li>
             <li>Remove unnecessary and unused apps (80% apps not used)</li>
             <li>Turn off things you don't use. eg. push notifications, ping, locations services, indexing, android: live
                 wallpaper & widgets
@@ -220,25 +218,28 @@ URL: https://code.google.com/p/io-2012-slides
 
     <article>
         <ul class="build">
-            <li>Try to use cross platform apps</li>
-            <ul>
-                <li>Sharing with colleagues & clients</li>
-                <li>What happens if you switch?</li>
-            </ul>
-            <li>Don't be overwhelmed</li>
-            <ul>
-                <li>Ask your friends</li>
-                <li>Use social media</li>
-                <li>Use sites like <a href="http://alternativeto.net">alternativeto.net</a> and <a
-                        href="http://appcrawlr.com">appcrawlr.com</a></li>
-            </ul>
-            <li>Where is your data?</li>
-            <ul>
-                <li>Cloud</li>
-                <li>Synced to PC</li>
-                <li>On device</li>
-                <li>Intranet</li>
-            </ul>
+            <li>Try to use cross platform apps
+                <ul>
+                    <li>Sharing with colleagues & clients</li>
+                    <li>What happens if you switch?</li>
+                </ul>
+            </li>
+            <li>Don't be overwhelmed
+                <ul>
+                    <li>Ask your friends</li>
+                    <li>Use social media</li>
+                    <li>Use sites like <a href="http://alternativeto.net">alternativeto.net</a> and <a
+                            href="http://appcrawlr.com">appcrawlr.com</a></li>
+                </ul>
+            </li>
+            <li>Where is your data?
+                <ul>
+                    <li>Cloud</li>
+                    <li>Synced to PC</li>
+                    <li>On device</li>
+                    <li>Intranet</li>
+                </ul>
+            </li>
         </ul>
     </article>
 </slide>
@@ -293,7 +294,7 @@ URL: https://code.google.com/p/io-2012-slides
             <li>Google Drive <img src="images/apps/drive.webp"/></li>
             <li>Office 365 <img src="images/apps/office.webp"/></li>
             <li>Evernote<img src="images/apps/evernote.webp"></li>
-            <li>Dropbox  <img src="images/apps/dropbox.webp"/></li>
+            <li>Dropbox <img src="images/apps/dropbox.webp"/></li>
             <li>Documents to Go <img src="images/apps/docstogo.webp"/></li>
         </ul>
     </article>
@@ -347,12 +348,35 @@ URL: https://code.google.com/p/io-2012-slides
     </article>
 </slide>
 
+<slide>
+    <hgroup>
+        <h2>Mobile development</h2>
+    </hgroup>
 
+    <article>
+        <ul class="build">
+            <li>iPhone/iPad: Objective C</li>
+            <li>Android: Java/C</li>
+            <li>Windows Mobile: .net</li>
+            <li>Cross Platform: many toolkits, usually Javascript/HTML</li>
+            <li>Mobile Web: HTML, Javascript + responsive design</li>
+            <li>Develop for mobile first: 20% of web access from mobile devices and rising rapidly</li>
+            <li>You are your possibly your best customer
+                <ul>
+                    <li>Think about apps you could develop for industry</li>
+                    <li>You have much better insight than developers stabbing randomly in the dark</li>
+                    <li>Scratch your own itch</li>
+                </ul>
+            </li>
+        </ul>
+    </article>
+</slide>
 
 <slide class="thank-you-slide segue nobackground">
     <aside class="gdbar right"><img src="images/refactor128.png"></aside>
     <article class="flexbox vleft auto-fadein">
         <h2>Thank You!</h2>
+        <p><a href="http://spidie.github.io/levmobtoday" style="color: white;">spidie.github.io/levmobtoday</a></p>
     </article>
     <p class="auto-fadein" data-config-contact>
         <!-- populated from slide_config.json -->
@@ -366,7 +390,7 @@ URL: https://code.google.com/p/io-2012-slides
 
 <script>
     var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-44071004-1']);
+    _gaq.push(['_setAccount', 'UA-44929684-1']);
     _gaq.push(['_trackPageview']);
 
     (function () {
