--- a/index.html
+++ b/index.html
@@ -146,15 +146,15 @@ URL: https://code.google.com/p/io-2012-slides
         <ul class="build">
             <li>IOS
                 <ul>
-                    <li>iPhone,iPad</li>
-                    <li>Entire controlled by Apple</li>
+                    <li>iPhone,iPad, iPod</li>
+                    <li>Entire controlled by Apple. All apps through AppStore.</li>
                 </ul>
             </li>
             <li>Android
                 <ul>
                     <li>Google Nexus 4,5,7,10</li>
                     <li>Samsung Galaxy S2,S3,S4, Galaxy Tab</li>
-                    <li>ASUS, LG, Motorola, Sony</li>
+                    <li>ASUS, LG, Motorola, Sony, Amazon Kindle</li>
                     <li>Driven by Google but a certain amount of freedom</li>
                 </ul>
             </li>
@@ -189,7 +189,7 @@ URL: https://code.google.com/p/io-2012-slides
             <li>Tune ups - Android Assistant/Task killer</li>
             <li>Re-installs - restore, cloud backup</li>
             <li>Remove unnecessary and unused apps (80% apps not used)</li>
-            <li>Turn off things you don't use. eg. push notifications, ping, locations services, indexing, android: live
+            <li>Turn off things you don't use. eg. push notifications, ping, location services, indexing, android: live
                 wallpaper & widgets
             </li>
             <li>Change your battery (even if you can't see it!)</li>
@@ -197,7 +197,7 @@ URL: https://code.google.com/p/io-2012-slides
             <li>If it's broken... get a second opinion! (or check <a href="http://ifixit.com">ifixit.com</a>)</li>
             <li>If it really is broken - please recycle or reuse</li>
             <li>And most importantly.....</li>
-            <li>.....USE IT!</li
+            <li><em>.....USE IT!</em></li>
         </ul>
     </article>
 </slide>
@@ -337,13 +337,16 @@ URL: https://code.google.com/p/io-2012-slides
         <h2>Others</h2>
     </hgroup>
 
+
     <article>
         <ul class="build apps">
-            <li>Livescribe <img src="images/apps/livescribe.gif"/></li>
+            <li><img src="images/livescribe.jpg" style="float: right; width:500px"/>Livescribe <img src="images/apps/livescribe.gif"/></li>
             <li>Swiftkey <img src="images/apps/swiftkey.webp"/></li>
             <li>...or buy a real keyboard!</li>
             <li>Xero <img src="images/apps/xero.webp"/></li>
             <li>Grafio <img src="images/apps/grafio.jpg"/></li>
+            <li>or go low tech....</li>
+            <li>Use your camera with whiteboards, notes - then annotate and share</li>
         </ul>
     </article>
 </slide>
@@ -355,17 +358,18 @@ URL: https://code.google.com/p/io-2012-slides
 
     <article>
         <ul class="build">
-            <li>iPhone/iPad: Objective C</li>
-            <li>Android: Java/C</li>
-            <li>Windows Mobile: .net</li>
+            <li>Native iPhone/iPad/iPod: Objective C</li>
+            <li>Native Android: Java/C</li>
+            <li>Native Windows Mobile: .net</li>
             <li>Cross Platform: many toolkits, usually Javascript/HTML</li>
             <li>Mobile Web: HTML, Javascript + responsive design</li>
             <li>Develop for mobile first: 20% of web access from mobile devices and rising rapidly</li>
-            <li>You are your possibly your best customer
+            <li>You are possibly your best customer
                 <ul>
-                    <li>Think about apps you could develop for industry</li>
-                    <li>You have much better insight than developers stabbing randomly in the dark</li>
-                    <li>Scratch your own itch</li>
+                    <li>Think about apps you could develop for your industry</li>
+                    <li>You have much better insight than others stabbing randomly in the dark</li>
+                    <li>Scratch your own itch, what is it worth to take away a pain?</li>
+                    <li>Be prepared to invest in a good developer</li>
                 </ul>
             </li>
         </ul>
