--- a/index.html
+++ b/index.html
@@ -53,10 +53,14 @@ URL: https://code.google.com/p/io-2012-slides
         <img src="images/steve-colour.png" style="float: right; width:200px"/>
         <ul class="build">
             <li>Ping-Pong Electronic Engineer</li>
-            <li>Working in IT industry for 20 years - 14 years consulting and still learning</li>
+            <li>Working in IT industry for 20 years
+                <ul><li>14 years consulting and still learning</li></ul></li>
             <li>Connector & Community guy</li>
-            <li>Founder of <a href="http://gctechspace.org">GCTechSpace</a> - an open tech incubator & accelerator in Robina, Gold Coast</li>
-            <li>Current pet project: using off-the-shelf mobile devices for industrial & robotic control</li>
+            <li>Founder of <a href="http://gctechspace.org">GCTechSpace</a>
+                <ul><li>open tech incubator & accelerator in Robina, Gold Coast</li></ul></li>
+            <li>Current pet project
+                <ul><li>using off-the-shelf mobile devices for industrial & robotic control</li>
+                </ul></li>
         </ul>
     </article>
 </slide>
@@ -147,7 +151,7 @@ URL: https://code.google.com/p/io-2012-slides
             <li>IOS
                 <ul>
                     <li>iPhone,iPad, iPod</li>
-                    <li>Entire controlled by Apple. All apps through AppStore.</li>
+                    <li>Entire controlled by Apple. All apps through AppStore</li>
                 </ul>
             </li>
             <li>Android
