--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@ URL: https://code.google.com/p/io-2012-slides
         <h1 data-config-title><!-- populated from slide_config.json --></h1>
         <h2 data-config-subtitle><!-- populated from slide_config.json --></h2>
         <p data-config-presenter><!-- populated from slide_config.json --></p>
-        <p><a href="http://spidie.github.io/levmobtoday">spidie.github.io/levmobtoday</a></p>
+        <p><a href="http://linkedin.com/in/dalton">linkedin.com/in/dalton</a><br/>
+        <a href="http://spidie.github.io/levmobtoday">spidie.github.io/levmobtoday</a></p>
     </hgroup>
 </slide>
 
